[CHORE] Note의 작성자 매핑 메서드 로직 수정